@@ -1,5 +1,15 @@
 2013-05-03  Eli Zaretskii  <eliz@gnu.org>
 
+	* w32/subproc/sub_proc.c: Include makeint.h.  Remove a private
+	incompatible prototype of xmalloc.
+	(batch_file_with_spaces): New function, detects Windows batch
+	files whose names include whitespace characters.
+	(process_begin): If exec_name is a batch file with whitespace
+	characters in its name, pass NULL as the first argument to
+	CreateProcess.  This avoids weird failures due to buggy quoting by
+	CreateProcess.  For the details, see the discussion starting at
+	http://lists.gnu.org/archive/html/make-w32/2013-04/msg00008.html.
+
 	* load.c (load_object, load_file): Accept an additional argument
 	DLP and return in it a pointer that can be used to unload the
 	dynamic object.
